--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -3,37 +3,41 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: flutter analysis
+name: build apk
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
+
 
 jobs:
   check:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
 
-      - name: Install dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+
+      - name: Setup java
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '21'
+        
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.22.0'
+          
+      - name: Get dependencies
         run: flutter pub get
 
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      - name: Verify formatting
-        run: dart format --output=none .
+      - name: Build apk
+        run: flutter build apk --split-per-abi
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: flutter test
+      - name: Collect artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release
+          path: /build/app/outputs/apk/release/*.apk
