--- a/.github/workflows/apkbuilder.yml
+++ b/.github/workflows/apkbuilder.yml
@@ -1,4 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
+ # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
 
       - name: Setup java
