--- a/.github/workflows/apkbuilder.yml
+++ b/.github/workflows/apkbuilder.yml
@@ -16,11 +16,10 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v4
-
+        uses: actions/checkout@v4
 
       - name: Setup java
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '21'
